--- a/config/zones/US-FLA-FPC.yaml
+++ b/config/zones/US-FLA-FPC.yaml
@@ -212,6 +212,11 @@ delays:
   production: 48
 emissionFactors:
   direct:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2022-01-01'
+      source: Electricity Maps, 2022 zone average
+      value: 429.95
     biomass:
     - datetime: '2020-01-01'
       source: BEIS 2021
@@ -269,6 +274,11 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023
       value: 28.739435464835893
+    hydro discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2022-01-01'
+      source: Electricity Maps, 2022 zone average
+      value: 420.27
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020
@@ -283,6 +293,11 @@ emissionFactors:
       source: eGrid 2023
       value: 1047.3624904149933
   lifecycle:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2022-01-01'
+      source: Electricity Maps, 2022 zone average
+      value: 537.12
     biomass:
     - _comment: Mean of all US zones
       datetime: '2020-01-01'
@@ -344,6 +359,11 @@ emissionFactors:
       datetime: '2023-01-01'
       source: eGrid 2023; IPCC 2014
       value: 66.73943546483589
+    hydro discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2022-01-01'
+      source: Electricity Maps, 2022 zone average
+      value: 525.9
     oil:
     - datetime: '2020-01-01'
       source: eGrid 2020; IPCC 2014
