--- a/config/zones/GP.yaml
+++ b/config/zones/GP.yaml
@@ -18,7 +18,18 @@ country: GP
 country_name: Guadeloupe
 currency: EUR
 emissionFactors:
-  lifecycle: {}
+  direct:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2022-01-01'
+      source: Electricity Maps, 2022 zone average
+      value: 405.21
+  lifecycle:
+    battery discharge:
+    - _comment: used storage values greater than zero.
+      datetime: '2022-01-01'
+      source: Electricity Maps, 2022 zone average
+      value: 555.38
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2016 average
