--- a/config/zones/JP-HKD.yaml
+++ b/config/zones/JP-HKD.yaml
@@ -28,7 +28,18 @@ currency: JPY
 delays:
   production: 5
 emissionFactors:
-  lifecycle: {}
+  direct:
+    hydro discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2020-01-01'
+      source: Electricity Maps, 2020 zone average
+      value: 436.29
+  lifecycle:
+    hydro discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2020-01-01'
+      source: Electricity Maps, 2020 zone average
+      value: 523.33
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
