--- a/config/zones/JP.yaml
+++ b/config/zones/JP.yaml
@@ -28,7 +28,18 @@ country: JP
 country_name: Japan
 currency: JPY
 emissionFactors:
-  lifecycle: {}
+  direct:
+    hydro discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2020-01-01'
+      source: Electricity Maps, 2020 zone average
+      value: 440.73
+  lifecycle:
+    hydro discharge:
+    - _comment: used storage values equal to zero.
+      datetime: '2020-01-01'
+      source: Electricity Maps, 2020 zone average
+      value: 530.94
 fallbackZoneMixes:
   powerOriginRatios:
   - _source: Electricity Maps, 2017 average
